@startuml DDD_compact2

hide circle

skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0


skinparam nodesep 10
skinparam ranksep 15
skinparam padding 5

skinparam classFontSize 10
skinparam classFontName Arial
skinparam classFontColor black

skinparam class {
  ArrowColor ffc5a1
  BorderColor White
  BackgroundColor badfdb
  BackgroundColor<<Event>> skyblue
  BackgroundColor<<Service>> Moccasin
}

top to bottom direction

package "<<agr Community>>" {
  class Community <<entity>><<root>> {
    +CommunityId
    +CommunityName
  }
}


package "<<agr Simulation>>" {
  class Simulation <<entity>><<root>> {
    +SimulationId
    +StartDate
    +EndDate
    +Load
    +BatteryLoad
    +PhotovoltaicLoad
  }
    Simulation --> Community
}


package "<<agr Profile>>" {
  class Profile <<entity>><<root>> {
    +ProfileId
    +Date
    +ProfileTimeStamp
    +ProfileLoad
    +SoldEnergy
    +BoughtEnergy
    +PhotovoltaicEnergyLoad
    +StateOfCharge
    +PeerIn
    +PeerOut
    +BatteryCharge
    +BatteryDischarge
  }
  Profile --> Simulation
}

package "<<agr User>>" {
  class User <<entity>><<root>> {
    +UserId
    +UserName
    +UserEmail
    +UserPassword
    +UserPhone
    +UserRole
  }
}




package "<<agr Prosumer>>" {
  class Prosumer <<entity>><<root>> {
    +ProsumerId
  }
 
  Prosumer --> Community
   Prosumer --|> User
  Profile --> Prosumer
}

package "<<agr Battery(ESS)>>" {
  class Battery <<entity>><<root>> {
    +BatteryId
    +BatteryName
    +MaxCapacity
    +Efficiency
    +MaxChargeDischarge
  }
  Prosumer --> Battery
}


package "<<agr CommunityManager>>" {
  class CommunityManager <<entity>><<root>> {
    +CommunityManagerId
  }
  CommunityManager --|> User
  CommunityManager --> Community
}

package "<<agr Administrator>>" {
  class Administrator <<entity>><<root>> {
    +AdminId
  }
  Administrator --|> User
}

@enduml
